Cambios para obtener observaciones (aún no funcional)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -177,13 +177,13 @@
                                                 }
                                             }
                                         }
-
+                                        <label class="bool-observacion" style="display:none;">@pregunta.tieneObservacion</label>
                                         if (pregunta.tieneObservacion == true)
                                         {
                                             <br />
                                             <br />
                                             <label> Observaciones:</label><br />
-                                            <textarea name="textarea" rows="5" cols="50" maxlength="495">
+                                            <textarea class ="observacion" name="textarea" rows="5" cols="50" maxlength="495">
                                                     </textarea>
                                             <br />
                                         }
