--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -53,6 +53,8 @@
                 });
 
         });
+    });
+    $(document).ready(function () {
         $("#btncopiarsecc").click(function () {
             console.log("prueba")
             $.ajax(
@@ -63,14 +65,14 @@
                 data: { //Passing data
                     Cod_Form_Origen: @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario)),
                     Nom_Form_Dest:  @Html.Raw(Json.Encode(Model.Formulario.Nombre)),
-                    Titulo_Seccion: $('dropTitulo').dropselect(),
-                    Cod_Form_Origen: $('dropCodigo').dropselect()
+                    Titulo_Seccion:$("dropTitulo option:selected").val(),
+                    Cod_Form_Origen: "131313"//$('dropCodigo').dropselect()
                     },
                     success: function (result) {
                         console.log("prueba2")
                         console.log(result.console)
                         if (result) {
-                            alert("Se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
+                            alert("Se copio correctamente " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
                                 + $("input:radio[name=seccion]:checked").val()),
                                 $('#ConformadosID').html(result);
                         } else {
