--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CrearUsuario.cshtml
@@ -23,7 +23,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-3">
                 @Html.EditorFor(model => model.Persona.Cedula, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Persona.Cedula, "", new { @class = "text-danger" })
@@ -67,7 +67,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Correo Institucional", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-3">
                 @Html.EditorFor(model => model.Usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Usuario.CorreoInstitucional, "", new { @class = "text-danger" })
