--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -6,13 +6,19 @@
 @{
     ViewBag.Title = "Formularios";
 }
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 <h2>Formularios</h2>
 
 <p>
     <input type="button" value="Crear Nuevo Formulario" class="btn btn-secondary" id="botonNuevaSeccion" onclick="accionBotonCrearNueva()" />
 </p>
-<table class="table" >
+<table class="table">
     <tr>
         <th>
             @Html.Label("Código Formulario")
@@ -51,7 +57,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                @Html.Action("VistaFormularioVParcial", new { CodForm = item.CodigoFormulario})
+                                @Html.Action("VistaFormularioVParcial", new { CodForm = item.CodigoFormulario })
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -81,4 +87,15 @@
         function accionBotonAsignarPregunta() {
             document.location = '@Url.Action("AsignarPreguntas", "CrearFormulario")';
         }
+</script>
+
+<script>
+    jQuery(document).ready(function () {
+
+        jQuery('#modalVistaPrevia').on('hidden.bs.modal', function (e) {
+
+            location.reload();
+        })
+
+    })
 </script>
