--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarSecciones.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarSecciones.cshtml
@@ -2,7 +2,7 @@
 
 
 
-<h2>Copiar Secciones</h2>
+
 
 <div class="row ">
     <div class="col-sm-4"><h4><strong>Codigo:</strong> @Model.Formulario.CodigoFormulario</h4></div>
@@ -13,7 +13,7 @@
     <div class="row">
 
         <div class="col-sm-6">
-            <h4 align='center'><strong>@Html.Label("Banco de Preguntas")</strong></h4>
+            <h4 align='center'><strong>@Html.Label("Banco de Formularios")</strong></h4>
             <table class="table table-bordered table-striped fixed_header">
                 <tr>
                     <td>  @Html.Label("Seleccione el formulario")</td>
